--- a/task-1-8/css/style.css
+++ b/task-1-8/css/style.css
@@ -323,19 +323,44 @@ body {
   font-size: 34px;
   font-weight: 700;
   line-height: 1;
-  color: #4a99d3;
-}
-.logo--white {
-  color: #fff;
+  color: currentColor;
 }
 
 .nav__list {
   display: flex;
+  flex-flow: column;
+  align-items: center;
   gap: 50px;
+  height: 100%;
+  padding: 50px;
+  background-color: #4a99d3;
+  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.5);
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    flex-flow: row;
+    padding: 0;
+    background-color: unset;
+    box-shadow: none;
+  }
 }
 
+.nav__link {
+  font-size: 1.5rem;
+  color: #fff;
+  transition: color 0.25s;
+}
 .nav__link:hover, .nav__link:focus {
-  color: #4a99d3;
+  color: #d3844a;
+}
+@media screen and (min-width: 768px) {
+  .nav__link {
+    font-size: 1rem;
+    color: #260041;
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: #4a99d3;
+  }
 }
 
 .button {
@@ -349,6 +374,7 @@ body {
   color: #fff;
   background-color: #4a99d3;
   border-radius: 5px;
+  transition: background-color 0.25s;
 }
 .button--black {
   --colorRed: currentColor;
@@ -360,42 +386,70 @@ body {
   padding: 10px;
   background-color: #000;
 }
+.button:hover, .button:focus {
+  background-color: #d3844a;
+}
 
 .card {
   max-width: 380px;
-  padding: 48px;
+  padding: 24px;
   background-color: #fff;
   box-shadow: 5px 20px 50px rgba(74, 153, 211, 0.2);
   border-radius: 10px;
 }
-
-.card__img-wrap {
-  position: relative;
-  height: 132px;
-  margin-bottom: 56px;
+@media screen and (min-width: 768px) {
+  .card {
+    padding: 36px;
+  }
+}
+@media screen and (min-width: 980px) {
+  .card {
+    padding: 48px;
+  }
 }
 
-.card__img {
-  position: absolute;
-  bottom: 0;
+.card__img-wrap {
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .card__img-wrap {
+    margin-bottom: 36px;
+  }
+}
+@media screen and (min-width: 980px) {
+  .card__img-wrap {
+    margin-bottom: 56px;
+  }
 }
 
 .card__title {
-  margin-bottom: 16px;
-  font-size: 20px;
+  margin-bottom: 0.8em;
+  font-size: 1.125rem;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #0f001a;
 }
+@media screen and (min-width: 980px) {
+  .card__title {
+    font-size: 1.25rem;
+  }
+}
 
 .card__text {
   height: 6.48em;
-  margin-bottom: 52px;
+  margin-bottom: 1.75em;
+  font-size: 0.875rem;
   line-height: 1.62;
   color: #0f001a;
   opacity: 0.6;
   overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .card__text {
+    margin-bottom: 3.25em;
+    font-size: 1rem;
+  }
 }
 
 .card__link {
@@ -406,10 +460,20 @@ body {
   font-weight: 500;
   letter-spacing: 0.05em;
   color: #4a99d3;
+  transition: color #d3844a;
+}
+.card__link svg {
+  transition: transform 0.25s;
+}
+.card__link:hover, .card__link:focus {
+  color: #d3844a;
+}
+.card__link:hover svg, .card__link:focus svg {
+  transform: translateX(50%);
 }
 
 .slider__pages {
-  margin-bottom: 37px;
+  margin-bottom: 35px;
 }
 
 .slider__page::before {
@@ -437,13 +501,20 @@ body {
 .slider__controls {
   display: flex;
   max-width: 160px;
-  margin-left: auto;
+  margin: 0 auto;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
+}
+@media screen and (min-width: 768px) {
+  .slider__controls {
+    margin-left: auto;
+    margin-right: unset;
+  }
 }
 
 .slider__button {
   padding: 20px;
   color: #4a99d3;
+  transition: color 0.25s, background-color 0.25s;
 }
 .slider__button:first-child {
   border-top-left-radius: 4px;
@@ -457,10 +528,14 @@ body {
   color: #fff;
   background-color: #4a99d3;
 }
+.slider__button:disabled {
+  color: #d3844a;
+}
 
 .quick-links__title {
   display: inline-block;
-  font-size: 18px;
+  margin-bottom: 1.8em;
+  font-size: 1.125rem;
   font-weight: 500;
   line-height: 1;
 }
@@ -476,28 +551,46 @@ body {
 .quick-links__list {
   display: flex;
   flex-direction: column;
-  gap: 18px;
-  margin-top: 34px;
-  font-size: 14px;
+  gap: 1.3em;
+  font-size: 0.875rem;
   line-height: 1;
+}
+
+.quick-links__link {
+  transition: color 0.25s;
+}
+.quick-links__link:hover, .quick-links__link:focus {
+  color: #d3844a;
 }
 
 .subscribe__caption {
   max-width: 90%;
-  margin-bottom: 20px;
-  font-size: 18px;
-  line-height: 1.44;
+  margin-bottom: 1.1em;
+  font-size: 1.125rem;
+  line-height: 1.4;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .subscribe__caption {
+    text-align: left;
+  }
 }
 
 .subscribe__wrap {
   display: flex;
+  flex-flow: wrap;
+  justify-content: center;
   gap: 10px;
+}
+@media screen and (min-width: 980px) {
+  .subscribe__wrap {
+    justify-content: end;
+  }
 }
 
 .subscribe__email {
-  flex: 1 1 50%;
-  padding: 16px 10px;
-  font-size: 14px;
+  flex: 250px;
+  padding: 1em 0.625em;
   line-height: 1;
   color: #0f001a;
   background-color: #fff;
@@ -507,15 +600,22 @@ body {
   color: inherit;
   opacity: 0.5;
 }
+.subscribe__email:focus {
+  outline-color: #d3844a;
+}
 
 .subscribe__submit {
-  padding: 16px;
-  font-size: 16px;
+  padding: 1em;
   font-weight: 700;
   line-height: 1;
   color: #4a99d3;
   background-color: #fff;
   border-radius: 3px;
+  transition: color 0.25s, background-color 0.25s;
+}
+.subscribe__submit:hover, .subscribe__submit:focus {
+  color: #fff;
+  background-color: #d3844a;
 }
 
 .social {
@@ -523,21 +623,38 @@ body {
   gap: 25px;
 }
 
+.social__link {
+  transition: color 0.25s;
+}
+.social__link svg {
+  transition: transform 0.25s;
+}
+.social__link:hover, .social__link:focus {
+  color: #d3844a;
+}
+.social__link:hover svg, .social__link:focus svg {
+  transform: scale(1.25);
+}
+
 .container {
-  max-width: 1300px;
+  max-width: 980px;
   margin: 0 auto;
   padding: 0 15px;
-}
-.container--narrow {
-  padding: 0 175px;
 }
 
 .header {
   position: absolute;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 42px 0;
+  padding: 8px 0;
+  color: #4a99d3;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 42px 0;
+  }
 }
 
 .header__container {
@@ -546,108 +663,279 @@ body {
   justify-content: space-between;
 }
 
+.header__burger {
+  display: block;
+  color: #260041;
+  transition: color 0.25s;
+}
+@media screen and (min-width: 768px) {
+  .header__burger {
+    display: none;
+  }
+}
+.header__burger:hover, .header__burger:focus {
+  color: #4a99d3;
+}
+
+.header__nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  right: 0;
+  transform: translateX(110%);
+  transition: transform 0.25s;
+}
+.header__burger:focus + .header__nav {
+  transform: translateX(0);
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    position: static;
+    transform: translateX(0);
+  }
+}
+
 .hero {
-  padding: 158px 0 76px;
+  padding: 120px 0 60px;
   background: linear-gradient(to bottom, #4a99d3 -300%, #fff 75%);
   box-shadow: 0px 4px 16px rgba(75, 0, 129, 0.1);
 }
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 160px 0 75px;
+  }
+}
 
 .hero__container {
-  display: flex;
-  align-items: center;
-  gap: 32px;
-  padding-right: 15px;
+  max-width: 1240px;
+  padding-left: 15px;
+}
+@media (min-width: 980px) and (max-width: 1240px) {
+  .hero__container {
+    padding-left: calc(
+      15px + 0.5 * (100vw - 980px)
+    );
+  }
+}
+@media (min-width: 1240px) {
+  .hero__container {
+    padding-left: 145px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5%;
+  }
 }
 
 .hero__content {
-  flex-basis: 636px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .hero__content {
+    flex: 55%;
+    text-align: left;
+  }
+}
+
+.hero__image {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .hero__image {
+    display: block;
+    flex: 40%;
+    max-width: 440px;
+  }
 }
 
 .hero__title {
-  margin-bottom: 14px;
-  font-size: 50px;
+  margin-bottom: 0.9em;
+  font-size: 2rem;
   font-weight: 500;
   line-height: 1.4;
   letter-spacing: 0.02em;
 }
+@media screen and (min-width: 768px) {
+  .hero__title {
+    margin-bottom: 0.3em;
+    font-size: 2.5rem;
+  }
+}
+@media screen and (min-width: 980px) {
+  .hero__title {
+    font-size: 3.125rem;
+  }
+}
 
 .hero__text {
-  margin-bottom: 60px;
-  font-size: 20px;
+  margin-bottom: 3em;
   line-height: 1.8;
+}
+@media screen and (min-width: 768px) {
+  .hero__text {
+    font-size: 1.125rem;
+  }
+}
+@media screen and (min-width: 980px) {
+  .hero__text {
+    font-size: 1.25rem;
+  }
 }
 
 .hero__buttons {
   display: flex;
+  flex-flow: wrap;
+  justify-content: center;
   gap: 20px;
 }
-
-.hero__image {
-  flex-basis: 440px;
+@media screen and (min-width: 768px) {
+  .hero__buttons {
+    justify-content: start;
+  }
 }
 
 .mission {
-  padding: 150px 0;
-  background: url("../assets/images/dots.svg") no-repeat top 85px right 12.5%/155px, url("../assets/images/dots.svg") no-repeat bottom 75px right 12.5%/155px, url("../assets/images/dots.svg") no-repeat center left 16.5%/155px, url(../assets/images/squares-1.svg) no-repeat top right -65px/255px, url(../assets/images/squares-2.svg) no-repeat bottom left -65px/255px;
+  padding: 60px 0;
+}
+@media screen and (min-width: 768px) {
+  .mission {
+    padding: 100px 0;
+    background: url("../assets/images/dots.svg") no-repeat top 85px left calc(50% + 475px)/155px, url("../assets/images/dots.svg") no-repeat center left calc(50% - 425px)/155px, url("../assets/images/dots.svg") no-repeat bottom 75px left calc(50% + 475px)/155px, url(../assets/images/squares-2.svg) no-repeat bottom left -65px/175px;
+  }
+}
+@media screen and (min-width: 980px) {
+  .mission {
+    padding: 150px 0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .mission {
+    background: url("../assets/images/dots.svg") no-repeat top 85px left calc(50% + 475px)/155px, url("../assets/images/dots.svg") no-repeat center left calc(50% - 425px)/155px, url("../assets/images/dots.svg") no-repeat bottom 75px left calc(50% + 475px)/155px, url(../assets/images/squares-1.svg) no-repeat top right -65px/255px, url(../assets/images/squares-2.svg) no-repeat bottom left -65px/255px;
+  }
 }
 
-.mission__content {
-  position: relative;
-  top: 0;
-  left: 0;
+@media screen and (min-width: 768px) {
+  .mission__container {
+    position: relative;
+  }
 }
 
 .mission__title {
-  position: absolute;
-  top: 0;
-  max-width: 395px;
-  font-size: 36px;
+  margin-bottom: 1.5em;
+  font-size: 1.75rem;
   font-weight: 500;
   line-height: 1.28;
   letter-spacing: 0.05em;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .mission__title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 45%;
+    padding-left: 15px;
+    font-size: 2rem;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 980px) {
+  .mission__title {
+    width: 40%;
+    font-size: 2.25rem;
+  }
 }
 
 .mission__cards {
   display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
-  gap: 110px;
-  padding-top: 12px;
+  flex-flow: column;
+  align-items: center;
+  row-gap: 55px;
+}
+@media screen and (min-width: 768px) {
+  .mission__cards {
+    flex-flow: row-reverse wrap;
+    row-gap: 110px;
+    column-gap: 10%;
+    max-width: 865px;
+    margin-left: auto;
+    padding-top: 15px;
+  }
 }
 
-.mission__card:nth-child(even) {
-  transform: translateY(calc(50% + 55px));
+.mission__card {
+  flex: 0 0 45%;
+}
+@media screen and (min-width: 768px) {
+  .mission__card:nth-child(even) {
+    transform: translateY(calc(50% + 55px));
+  }
 }
 
 .about {
-  padding: 95px 0;
+  padding: 50px 0;
   text-align: center;
   background-color: rgba(74, 153, 211, 0.1);
 }
+@media screen and (min-width: 768px) {
+  .about {
+    padding: 70px 0;
+  }
+}
+@media screen and (min-width: 980px) {
+  .about {
+    padding: 95px 0;
+  }
+}
 
 .about__title {
-  margin-bottom: 88px;
-  font-size: 26px;
+  margin-bottom: 1.75em;
+  font-size: 1.625rem;
   font-weight: 700;
   line-height: 1;
   color: #4a99d3;
 }
+@media screen and (min-width: 768px) {
+  .about__title {
+    margin-bottom: 2.5em;
+  }
+}
+@media screen and (min-width: 980px) {
+  .about__title {
+    margin-bottom: 3.25em;
+  }
+}
 
 .about__steps {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 15px;
+  flex-flow: column;
+  align-items: center;
+  gap: 45px;
+}
+@media screen and (min-width: 768px) {
+  .about__steps {
+    flex-flow: row;
+    justify-content: space-between;
+  }
 }
 
 .about__step {
-  max-width: 250px;
+  max-width: 260px;
   color: #0f001a;
 }
 
+.about__icon {
+  margin: 0 auto 30px;
+}
+
 .about__subtitle {
-  margin: 30px 0 10px;
-  font-size: 18px;
+  margin-bottom: 0.55em;
+  font-size: 1.125rem;
   font-weight: 500;
   line-height: 1;
 }
@@ -657,74 +945,153 @@ body {
 }
 
 .testimonials {
-  position: relative;
-  padding: 150px 0 0;
-  background: url("../assets/images/dots.svg") no-repeat top 385px right/155px;
+  padding: 50px 0 0;
+  background: url("../assets/images/dots.svg") no-repeat top 385px right calc(50% - 625px)/155px;
 }
-.testimonials::before {
-  content: "";
-  position: absolute;
-  top: 185px;
-  left: 0;
-  display: block;
-  width: 47.5%;
-  height: 520px;
-  background: linear-gradient(to bottom, transparent 120px, rgba(74, 153, 211, 0.1) 120px), url("../assets/images/user.png") no-repeat bottom 0 right 100px;
+@media screen and (min-width: 768px) {
+  .testimonials {
+    position: relative;
+    padding: 100px 0 0;
+  }
+  .testimonials::before {
+    content: "";
+    position: absolute;
+    top: 140px;
+    left: 0;
+    display: block;
+    width: 47.5%;
+    height: 420px;
+    background: url("../assets/images/user.png") no-repeat bottom 0 right 35%/300px, linear-gradient(to bottom, transparent 120px, rgba(74, 153, 211, 0.1) 120px);
+  }
+}
+@media screen and (min-width: 980px) {
+  .testimonials {
+    padding: 150px 0 0;
+  }
+  .testimonials::before {
+    top: 185px;
+    height: 520px;
+    background-size: initial;
+  }
 }
 
 .testimonials__title {
-  margin-bottom: 208px;
-  font-size: 26px;
+  margin-bottom: 1em;
+  font-size: 1.625rem;
   font-weight: 700;
   line-height: 1;
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .testimonials__title {
+    margin-bottom: 4em;
+  }
+}
+@media screen and (min-width: 980px) {
+  .testimonials__title {
+    margin-bottom: 8em;
+  }
+}
 
 .testimonials__slider {
-  margin-left: auto;
-  max-width: 420px;
+  margin: 0 auto;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .testimonials__slider {
+    width: 50%;
+    margin-left: auto;
+    margin-right: unset;
+  }
 }
 
 .download {
-  padding: 120px 0;
+  padding: 90px 0 60px;
   text-align: center;
-  background: url(../assets/images/squares-3.svg) no-repeat bottom -50px left -65px/255px, url(../assets/images/squares-4.svg) no-repeat bottom -50px right -65px/255px;
+}
+@media screen and (min-width: 768px) {
+  .download {
+    padding-bottom: 90px;
+    background: url(../assets/images/squares-3.svg) no-repeat bottom -50px left -65px/175px, url(../assets/images/squares-4.svg) no-repeat bottom -50px right -65px/175px;
+  }
+}
+@media screen and (min-width: 980px) {
+  .download {
+    padding: 120px 0;
+    background-size: 255px, 255px;
+  }
 }
 
 .download__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 70px;
-  padding-left: 100px;
+  max-width: 1070px;
+  padding-right: 15px;
+}
+@media (min-width: 980px) and (max-width: 1070px) {
+  .download__container {
+    padding-right: calc(
+      15px + 0.5 * (100vw - 980px)
+    );
+  }
+}
+@media (min-width: 1070px) {
+  .download__container {
+    padding-right: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .download__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5%;
+  }
 }
 
-.hero__image {
-  flex-basis: 516px;
+.download__image {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .download__image {
+    display: block;
+    flex-basis: 50%;
+  }
 }
 
-.download__content {
-  flex-basis: 450px;
+@media screen and (min-width: 768px) {
+  .download__content {
+    flex-basis: 45%;
+  }
 }
 
 .download__title {
-  margin-bottom: 15px;
-  font-size: 25px;
+  margin-bottom: 1.2em;
+  font-size: 1.625rem;
   font-weight: 700;
   line-height: 1;
   color: #0f001a;
 }
+@media screen and (min-width: 768px) {
+  .download__title {
+    margin-bottom: 0.6em;
+  }
+}
 
 .download__text {
-  margin-bottom: 55px;
+  margin-bottom: 3.6em;
   line-height: 1.5;
   opacity: 0.5;
 }
 
 .download__buttons {
   display: flex;
+  flex-flow: wrap;
   justify-content: center;
   gap: 20px;
+}
+@media screen and (min-width: 768px) {
+  .download__buttons {
+    flex-flow: nowrap;
+  }
 }
 
 .footer {
@@ -733,31 +1100,73 @@ body {
 }
 
 .footer__container {
-  padding: 0 105px;
+  max-width: 1220px;
   display: flex;
-  align-items: start;
-  justify-content: space-between;
 }
 
 .footer__top {
   padding: 55px 0 30px;
   border-bottom: 1px solid currentColor;
 }
+.footer__top .footer__container {
+  flex-flow: column;
+  gap: 40px;
+}
+@media screen and (min-width: 768px) {
+  .footer__top .footer__container {
+    flex-flow: row wrap;
+    align-items: start;
+    justify-content: space-between;
+  }
+}
 
 .footer__bottom {
-  padding: 23px 0;
+  padding: 25px 0;
 }
 .footer__bottom .footer__container {
+  flex-flow: column-reverse;
   align-items: center;
+  gap: 25px;
+}
+@media screen and (min-width: 768px) {
+  .footer__bottom .footer__container {
+    flex-flow: row;
+    justify-content: space-between;
+  }
 }
 
 .footer__links {
   display: flex;
-  gap: 60px;
+  flex-flow: wrap;
+  justify-content: space-between;
+  gap: 40px;
+}
+@media screen and (min-width: 768px) {
+  .footer__links {
+    order: 3;
+    flex-flow: row;
+    flex-basis: 55%;
+    gap: 50px;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 980px) {
+  .footer__links {
+    order: initial;
+    flex-basis: auto;
+    margin-left: unset;
+  }
 }
 
-.footer__subscribe {
-  flex-basis: 33.333%;
+@media screen and (min-width: 768px) {
+  .footer__subscribe {
+    flex-basis: 55%;
+  }
+}
+@media screen and (min-width: 980px) {
+  .footer__subscribe {
+    flex-basis: 35%;
+  }
 }
 
 .footer__copy {
