--- a/task-1-8/sass/layout/_footer.scss
+++ b/task-1-8/sass/layout/_footer.scss
@@ -4,33 +4,71 @@
 }
 
 .footer__container {
-  padding: 0 105px;
+  max-width: $footerContainerWidth + px;
 
   display: flex;
-  align-items: start;
-  justify-content: space-between;
 }
 
 .footer__top {
   padding: 55px 0 30px;
   border-bottom: 1px solid currentColor;
+
+  .footer__container {
+    flex-flow: column;
+    gap: 40px;
+
+    @include media-tablet {
+      flex-flow: row wrap;
+      align-items: start;
+      justify-content: space-between;
+    }
+  }
 }
 
 .footer__bottom {
-  padding: 23px 0;
+  padding: 25px 0;
 
   .footer__container {
+    flex-flow: column-reverse;
     align-items: center;
+    gap: 25px;
+
+    @include media-tablet {
+      flex-flow: row;
+      justify-content: space-between;
+    }
   }
 }
 
 .footer__links {
   display: flex;
-  gap: 60px;
+  flex-flow: wrap;
+  justify-content: space-between;
+  gap: 40px;
+
+  @include media-tablet {
+    order: 3;
+    flex-flow: row;
+    flex-basis: 55%;
+    gap: 50px;
+    margin-left: auto;
+  }
+
+  @include media-desktop {
+    order: initial;
+    flex-basis: auto;
+    margin-left: unset;
+  }
 }
 
 .footer__subscribe {
-  flex-basis: 33.333%;
+  @include media-tablet {
+    flex-basis: 55%;
+  }
+
+  @include media-desktop {
+    flex-basis: 35%;
+  }
 }
 
 .footer__copy {
