--- a/task-1-8/sass/abstracts/_mixins.scss
+++ b/task-1-8/sass/abstracts/_mixins.scss
@@ -23,3 +23,46 @@
   line-height: $height;
   letter-spacing: $spacing;
 }
+
+@mixin resp-prop(
+  $propName,
+  $maxValue,
+  $minValue: 0,
+  $maxViewWidth,
+  $minViewWidth: 320
+) {
+  $scaleFactor: calc(($maxValue - $minValue) / ($maxViewWidth - $minViewWidth));
+
+  // Static min value
+  #{$propName}: #{$minValue + px};
+
+  // Responsible value
+  @media (min-width: #{$minViewWidth + px}) and (max-width: #{$maxViewWidth + px}) {
+    #{$propName}: calc(
+      #{$minValue + px} + #{$scaleFactor} * (100vw - #{$minViewWidth + px})
+    );
+  }
+
+  // Static max value
+  @media (min-width: #{$maxViewWidth + px}) {
+    #{$propName}: #{$maxValue + px};
+  }
+}
+
+@mixin media-tablet {
+  @media screen and (min-width: $tabletBreak) {
+    @content;
+  }
+}
+
+@mixin media-desktop {
+  @media screen and (min-width: $desktopBreak) {
+    @content;
+  }
+}
+
+@mixin media-desktop-l {
+  @media screen and (min-width: $desktopLargeBreak) {
+    @content;
+  }
+}
