--- a/task-1-8/sass/components/_social.scss
+++ b/task-1-8/sass/components/_social.scss
@@ -2,3 +2,20 @@
   display: flex;
   gap: 25px;
 }
+
+.social__link {
+  transition: color $transitionProps;
+
+  svg {
+    transition: transform $transitionProps;
+  }
+
+  &:hover,
+  &:focus {
+    color: $secHoverColor;
+
+    svg {
+      transform: scale(1.25);
+    }
+  }
+}
