--- a/task-1-8/sass/layout/_download.scss
+++ b/task-1-8/sass/layout/_download.scss
@@ -1,39 +1,70 @@
 .download {
-  padding: 120px 0;
+  padding: 90px 0 60px;
 
   text-align: center;
 
-  background: url(#{$squaresImg + "-3.svg"}) no-repeat bottom -50px left -65px /
-      255px,
-    url(#{$squaresImg + "-4.svg"}) no-repeat bottom -50px right -65px / 255px;
+  @include media-tablet {
+    padding-bottom: 90px;
+
+    background: url(#{$squaresImg + "-3.svg"}) no-repeat bottom -50px left -65px /
+        175px,
+      url(#{$squaresImg + "-4.svg"}) no-repeat bottom -50px right -65px / 175px;
+  }
+
+  @include media-desktop {
+    padding: 120px 0;
+
+    background-size: 255px, 255px;
+  }
 }
 
 .download__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 70px;
+  max-width: $downloadContainerWidth + px;
 
-  padding-left: 100px;
+  @include resp-prop(
+    $propName: "padding-right",
+    $maxValue: $downloadPaddingRight,
+    $minValue: $containerPadding,
+    $maxViewWidth: $downloadContainerWidth,
+    $minViewWidth: $containerWidth
+  );
+
+  @include media-tablet {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5%;
+  }
 }
 
-.hero__image {
-  flex-basis: 516px;
+.download__image {
+  display: none;
+
+  @include media-tablet {
+    display: block;
+    flex-basis: 50%;
+  }
 }
 
 .download__content {
-  flex-basis: 450px;
+  @include media-tablet {
+    flex-basis: 45%;
+  }
 }
 
 .download__title {
-  margin-bottom: 15px;
+  margin-bottom: 1.2em;
 
-  @include font($weight: 700, $size: 25px, $height: 1);
+  @include font($weight: 700, $size: 1.625rem, $height: 1);
   color: $secColor;
+
+  @include media-tablet {
+    margin-bottom: 0.6em;
+  }
 }
 
 .download__text {
-  margin-bottom: 55px;
+  margin-bottom: 3.6em;
 
   @include font($height: 1.5);
   opacity: 0.5;
@@ -41,6 +72,11 @@
 
 .download__buttons {
   display: flex;
+  flex-flow: wrap;
   justify-content: center;
   gap: 20px;
+
+  @include media-tablet {
+    flex-flow: nowrap;
+  }
 }
