--- a/task-1-8/sass/layout/_testimonials.scss
+++ b/task-1-8/sass/layout/_testimonials.scss
@@ -1,30 +1,60 @@
 .testimonials {
-  position: relative;
-  padding: 150px 0 0;
-  background: url($dotsImg) no-repeat top 385px right / 155px;
+  padding: 50px 0 0;
+  background: url($dotsImg) no-repeat top 385px right calc(50% - 625px) / 155px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 185px;
-    left: 0;
-    display: block;
-    width: 47.5%;
-    height: 520px;
+  @include media-tablet {
+    position: relative;
+    padding: 100px 0 0;
 
-    background: linear-gradient(to bottom, transparent 120px, $secBgColor 120px),
-      url($userImg) no-repeat bottom 0 right 100px;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 140px;
+      left: 0;
+      display: block;
+      width: 47.5%;
+      height: 420px;
+
+      background: url($userImg) no-repeat bottom 0 right 35% / 300px,
+        linear-gradient(to bottom, transparent 120px, $secBgColor 120px);
+    }
+  }
+
+  @include media-desktop {
+    padding: 150px 0 0;
+
+    &::before {
+      top: 185px;
+      height: 520px;
+
+      background-size: initial;
+    }
   }
 }
 
 .testimonials__title {
-  margin-bottom: 208px;
+  margin-bottom: 1em;
 
-  @include font($weight: 700, $size: 26px, $height: 1);
+  @include font($weight: 700, $size: 1.625rem, $height: 1);
   text-align: center;
+
+  @include media-tablet {
+    margin-bottom: 4em;
+  }
+
+  @include media-desktop {
+    margin-bottom: 8em;
+  }
 }
 
 .testimonials__slider {
-  margin-left: auto;
-  max-width: 420px;
+  margin: 0 auto;
+  width: 100%;
+
+  @include media-tablet {
+    width: 50%;
+
+    margin-left: auto;
+    margin-right: unset;
+  }
 }
