--- a/task-1-8/css/style.css
+++ b/task-1-8/css/style.css
@@ -313,6 +313,10 @@ svg {
   fill: currentColor;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Objective", sans-serif;
   color: #260041;
@@ -334,7 +338,7 @@ body {
   height: 100%;
   padding: 50px;
   background-color: #4a99d3;
-  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.5);
+  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.4);
 }
 @media screen and (min-width: 768px) {
   .nav__list {
@@ -392,15 +396,10 @@ body {
 
 .card {
   max-width: 380px;
-  padding: 24px;
+  padding: 36px;
   background-color: #fff;
   box-shadow: 5px 20px 50px rgba(74, 153, 211, 0.2);
   border-radius: 10px;
-}
-@media screen and (min-width: 768px) {
-  .card {
-    padding: 36px;
-  }
 }
 @media screen and (min-width: 980px) {
   .card {
@@ -409,6 +408,7 @@ body {
 }
 
 .card__img-wrap {
+  position: relative;
   margin-bottom: 24px;
 }
 @media screen and (min-width: 768px) {
@@ -420,6 +420,15 @@ body {
   .card__img-wrap {
     margin-bottom: 56px;
   }
+}
+
+.card__img--flying {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  filter: drop-shadow(2px 4px 8px rgba(0, 0, 0, 0.4));
+  animation: fly 5s ease-in-out infinite alternate;
 }
 
 .card__title {
@@ -472,10 +481,34 @@ body {
   transform: translateX(50%);
 }
 
+@keyframes fly {
+  from {
+    transform: translateY(5px);
+  }
+  to {
+    transform: translateY(-5px);
+  }
+}
+.slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slider__trigger {
+  display: none;
+}
+
 .slider__pages {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
   margin-bottom: 35px;
 }
 
+.slider__page {
+  flex: 0 0 100%;
+  transition: transform 0.25s;
+}
 .slider__page::before {
   content: "";
   display: block;
@@ -530,6 +563,22 @@ body {
 }
 .slider__button:disabled {
   color: #d3844a;
+}
+
+#slide1:checked ~ .slider__pages > .slider__page {
+  transform: translateX(0);
+}
+#slide1:checked ~ .slider__controls > [for=slide1] {
+  color: #878787;
+  pointer-events: none;
+}
+
+#slide2:checked ~ .slider__pages > .slider__page {
+  transform: translateX(-100%);
+}
+#slide2:checked ~ .slider__controls > [for=slide2] {
+  color: #878787;
+  pointer-events: none;
 }
 
 .quick-links__title {
@@ -826,7 +875,7 @@ body {
 }
 
 .mission__title {
-  margin-bottom: 1.5em;
+  margin-bottom: 2em;
   font-size: 1.75rem;
   font-weight: 500;
   line-height: 1.28;
@@ -994,8 +1043,8 @@ body {
 }
 
 .testimonials__slider {
-  margin: 0 auto;
   width: 100%;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .testimonials__slider {
@@ -1100,8 +1149,8 @@ body {
 }
 
 .footer__container {
-  max-width: 1220px;
   display: flex;
+  max-width: 1220px;
 }
 
 .footer__top {
