--- a/task-1-8/sass/components/_slider.scss
+++ b/task-1-8/sass/components/_slider.scss
@@ -1,8 +1,23 @@
+.slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slider__trigger {
+  display: none;
+}
+
 .slider__pages {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
   margin-bottom: 35px;
 }
 
 .slider__page {
+  flex: 0 0 100%;
+  transition: transform $transitionProps;
+
   &::before {
     content: "";
     display: block;
@@ -17,6 +32,7 @@
 
 .slider__text {
   margin-bottom: 40px;
+
   @include font($height: 1.5);
   opacity: 0.5;
 }
@@ -29,6 +45,7 @@
   display: flex;
   max-width: 160px;
   margin: 0 auto;
+
   box-shadow: $btnShadow;
 
   @include media-tablet {
@@ -39,8 +56,8 @@
 
 .slider__button {
   padding: 20px;
-  color: $primAccentColor;
 
+  color: $primAccentColor;
   transition: color $transitionProps, background-color $transitionProps;
 
   &:first-child {
@@ -61,5 +78,25 @@
 
   &:disabled {
     color: $secAccentColor;
+  }
+}
+
+#slide1:checked {
+  & ~ .slider__pages > .slider__page {
+    transform: translateX(0);
+  }
+  & ~ .slider__controls > [for="slide1"] {
+    color: $disabledColor;
+    pointer-events: none;
+  }
+}
+
+#slide2:checked {
+  & ~ .slider__pages > .slider__page {
+    transform: translateX(-100%);
+  }
+  & ~ .slider__controls > [for="slide2"] {
+    color: $disabledColor;
+    pointer-events: none;
   }
 }
